# OIN

./: .Dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  Dockerfile  LICENSE.md  README.md  REST.md  RPC-Crawlers.md  app.ts  data.sql  oin-migrate.psql  ormconfig.json  package.json  release.toml  requirements.md  server.ts  tsconfig.json  tslint.json
backend-api/: .gitignore  Dockerfile  README.md  package.json  tslint.json
backend-api/src/: app.ts  entry.ts  server.ts
backend-experimental/: diesel.toml
backend-experimental/src/: db.rs  state.rs
config/: config.sample.yaml  config.travis.yaml
controllers/: message.ts  rpc.ts  session.ts  subscription.ts  user.ts
frontend/: .gitlab-ci.yml  Dockerfile  README.md  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  image.css  index.tsx
lib/: auth.ts  config.ts  db.ts  errors.ts  log.ts  pagination.ts
middlewares/: authentication.ts  error.ts  rpc.ts
migrations/: 1513827534850-init.ts  1513838016475-EmailUnique.ts  1513934299276-Message.ts  1514009935606-EnhanceColumnNames.ts  1518565960634-Service.ts  1518602381200-Service.ts  1518680003112-NewPermissionColumn.ts  1526130213201-FixTypo.ts  1526179801757-UpgradeMessage.ts  1526190579246-Init.ts  1526199502161-Init.ts
migrations/2018-06-14-112602_init_schema/: up.sql
migrations/2018-06-17-013611_create_service/: down.sql  up.sql
migrations/2018-06-18-024545_migrate_from_nodejs/: down.sql  up.sql
migrations/2018-06-18-025756_add_permissions/: down.sql
migrations/2018-06-18-052737_add_default_subscription_deleted/: up.sql
models/: confirmation.ts  index.ts  message.ts  service.ts  session.ts  subscription.ts  user.ts
modules/: app.ts  legacy.ts
public/: index.html
routes/: confirmation.ts  index.ts  messages.ts  rpc.ts  services.ts  session.ts  users.ts
service-pack-hazel/: package.json
service-pack-hazel/src/: client.ts  index.ts  log.ts  main.ts  message.ts  store.ts
src/: App.test.tsx  App.tsx  app.controller.ts  app.ts  auth.rs  client.ts  config.rs  config.ts  db.rs  entry.ts  error.rs  image.css  index.tsx  main.rs  main.ts  message.ts  response.rs  schema.rs  server.ts  service.ts  state.rs  store.ts  types.ts
src/Components/: AddSubscriptionDialog.tsx  User.tsx  (+7 more)
test/: helpers.ts  index.ts
tests/: index.ts
(+187 files in other folders)
