[package]
name = "sandra-backend"
version = "0.1.0"
authors = ["Yuze Fu <git@xfox.me>"]

[dependencies]
actix-web = "0.6.13"
diesel = { version = "1.3.2", features = ["postgres", "chrono", "r2d2", "uuid"] }
diesel_migrations = "1.3.0"
dotenv = "0.13.0"
actix = "0.5.8"
uuid = { version = "0.6.5", features = ["serde"] }
chrono = { version = "0.4.3", features = ["serde"] }
r2d2 = "0.8.2"
futures = "0.1.21"
serde = "1.0.66"
serde_derive = "1.0.66"
failure = "0.1.1"
bcrypt = "0.2.0"
listenfd = "0.3.3"
base64 = "0.9.2"
pretty_env_logger = "0.2.3"
log = "0.4.2"
num_cpus = "1.8.0"
diesel-derive-enum = { features = ["postgres"], git = "https://github.com/coderfox/diesel-derive-enum.git" }
